fix efs filesystem deploy

--- a/templates/aws-refarch-wordpress-03-efsfilesystem.yaml
+++ b/templates/aws-refarch-wordpress-03-efsfilesystem.yaml
@@ -162,6 +162,7 @@ Parameters:
   EfsCopyDataFrom:
     Description: Clone EFS from existing EFS
     Type: String
+    Default: AWS::NoValue
   WPDirectory:
     Description: Wordpress directory
     Type: String
