--- a/templates/aws-refarch-wordpress-master-newvpc.yaml
+++ b/templates/aws-refarch-wordpress-master-newvpc.yaml
@@ -1075,6 +1075,8 @@ Resources:
           !Ref EfsPerformanceMode
         Subnet:
           !GetAtt [ newvpc, Outputs.DataSubnet ]
+        WPDirectory:
+          !Ref WPDirectory 
       TemplateURL: https://s3.amazonaws.com/rxrevu-aws-refarch/wordpress/latest/templates/aws-refarch-wordpress-03-efsfilesystem.yaml
   efsalarms:
     Condition: EfsCreateAlarms
