rip more things out, hopefully fix deploy

--- a/templates/aws-refarch-wordpress-03-efsfilesystem.yaml
+++ b/templates/aws-refarch-wordpress-03-efsfilesystem.yaml
@@ -166,6 +166,7 @@ Parameters:
   WPDirectory:
     Description: Wordpress directory
     Type: String
+    Default: rxrevuwp
   SecurityGroup:
     Description: Select the Amazon EFS security group.
     Type: AWS::EC2::SecurityGroup::Id   
