--- a/templates/aws-refarch-wordpress-03-rds.yaml
+++ b/templates/aws-refarch-wordpress-03-rds.yaml
@@ -102,10 +102,6 @@ Parameters:
     AllowedPattern: ^([a-zA-Z0-9]*)$
     Description: The Amazon RDS master database name.
     Type: String
-  DatabaseRestoreSnapshot:
-    Description: The snapshot name to restore from.
-    Type: String
-    Default: ''
   DatabaseSecurityGroup:
     Description: Select the database security group.
     Type: AWS::EC2::SecurityGroup::Id
@@ -165,8 +161,6 @@ Conditions:
   Subnet5: !Condition NumberOfSubnets6
   UseAWS-ManagedCMK:
     !Equals ['', !Ref DatabaseCmk]
-  NoSnapshot:
-    !Equals ['', !Ref DatabaseRestoreSnapshot]
 
 Resources:
 
@@ -179,8 +173,8 @@ Resources:
       Engine: aurora
       KmsKeyId:
         !If [ UseAWS-ManagedCMK, !Ref 'AWS::NoValue', !Ref DatabaseCmk ]
-      MasterUsername: !If [ NoSnapshot, !Ref DatabaseMasterUsername, !Ref 'AWS::NoValue']
-      MasterUserPassword: !If [ NoSnapshot, !Ref DatabaseMasterPassword, !Ref 'AWS::NoValue']
+      MasterUsername: !Ref DatabaseMasterUsername
+      MasterUserPassword: !Ref DatabaseMasterPassword
       Port: 3306
       StorageEncrypted: !Ref DatabaseEncrpytedBoolean
       SnapshotIdentifier: !Ref 'AWS::NoValue'
