--- a/samples/20-aws.ini
+++ b/samples/20-aws.ini
@@ -1,7 +1,9 @@
 ; Enable php.ini overrides for hosting WordPress on AWS - https://github.com/awslabs/aws-refarch-wordpress
 
-memory_limit = 128M
+memory_limit = 256M
 post_max_size = 0
 upload_max_filesize = 64M
 max_input_time = 60
 max_execution_time = 30
+expose_php = 0
+realpath_cache_size = 16M
