update elasticache client

--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -978,9 +978,10 @@ Resources:
                   #!/bin/bash -xe
                   ln -s /usr/bin/pecl7 /usr/bin/pecl #just so pecl is available easily
                   pecl7 install igbinary
-                  curl -L https://elasticache-downloads.s3.amazonaws.com/ClusterClient/PHP-7.2/latest-64bit > /tmp/AmazonElastiCacheClusterClient-2.0.1-PHP70-64bit.tar.gz
-                  tar -C /tmp -xf '/tmp/AmazonElastiCacheClusterClient-2.0.1-PHP70-64bit.tar.gz'
-                  cp '/tmp/amazon-elasticache-cluster-client.so' /usr/lib64/php/7.2/modules/
+                  cd /tmp && curl -LO https://github.com/awslabs/aws-elasticache-cluster-client-memcached-for-php/files/1993851/AmazonElasticacheClusterClient-PHP72-64bit-libmemcached-1.0.8.tar.gz
+                  tar -xf AmazonElasticacheClusterClient-PHP72-64bit-libmemcached-1.0.8.tar.gz
+                  cp amazon-elasticache-cluster-client.so /usr/lib64/php/7.2/modules/
+                  cd -
                   if [ ! -f /etc/php-7.2.d/50-memcached.ini ]; then
                       touch /etc/php-7.2.d/50-memcached.ini
                   fi
