install opcache package

--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -941,6 +941,7 @@ Resources:
               php72-devel: []
               php7-pear: []
               php72-mysqlnd: []
+              php72-opcache: []
           files:
             /tmp/create_site_conf.sh:
               content:
