--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -728,7 +728,6 @@ Resources:
             yum:
               awslogs: []
               httpd24: []
-              mod24_proxy_html: []
               mysql56: []
               php56: []
               php56-devel: []
@@ -937,6 +936,7 @@ Resources:
             yum:
               awslogs: []
               httpd24: []
+              mod24_proxy_html: []
               mysql57: []
               php72: []
               php72-devel: []
@@ -950,12 +950,12 @@ Resources:
                     "#!/bin/bash -xe\n",
                     "if [ ! -f /etc/httpd/conf.d/", !Ref WPDirectory, ".conf ]; then\n",                    
                     "   touch /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo 'ServerName 127.2.0.1:80' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo 'ServerName https://wp.rxrevu.com' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo 'DocumentRoot /var/www/wordpress/", !Ref WPDirectory, "' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '<Directory /var/www/wordpress/", !Ref WPDirectory, ">' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteEngine On' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteCond %{HTTPS} off'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteRule (.*) https://%{SERVER_NAME}/$1 [R,L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteRule (.*) https://wp.rxrevu.com$1 [R,L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Options Indexes FollowSymLinks' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  AllowOverride All' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Require all granted' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
