--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -937,6 +937,7 @@ Resources:
               awslogs: []
               httpd24: []
               mod24_proxy_html: []
+              lynis: []
               mysql57: []
               php72: []
               php72-devel: []
@@ -955,7 +956,7 @@ Resources:
                     "   echo '<Directory /var/www/wordpress/", !Ref WPDirectory, ">' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteEngine On' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteCond %{HTTPS} off'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteRule (.*) https://wp.rxrevu.com$1 [R,L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteRule (.*) https://wp.rxrevu.com/$1 [R,L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Options Indexes FollowSymLinks' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  AllowOverride All' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Require all granted' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
