--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -936,7 +936,6 @@ Resources:
             yum:
               awslogs: []
               httpd24: []
-              mod24_proxy_html: []
               lynis: []
               mysql57: []
               php72: []
@@ -955,8 +954,9 @@ Resources:
                     "   echo 'DocumentRoot /var/www/wordpress/", !Ref WPDirectory, "' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '<Directory /var/www/wordpress/", !Ref WPDirectory, ">' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteEngine On' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteCond %{HTTPS} off'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteRule (.*) https://wp.rxrevu.com/$1 [R,L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteCond %{HTTPS} !=on'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteCond %{HTTP_HOST} =wp.rxrevu.com'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} ' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Options Indexes FollowSymLinks' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  AllowOverride All' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Require all granted' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
