--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -937,6 +937,7 @@ Resources:
               awslogs: []
               httpd24: []
               lynis: []
+              tig: []
               mysql57: []
               php72: []
               php72-devel: []
@@ -956,7 +957,7 @@ Resources:
                     "   echo '  RewriteEngine On' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteCond %{HTTPS} !=on'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  RewriteCond %{HTTP_HOST} =wp.rxrevu.com'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} ' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo '  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Options Indexes FollowSymLinks' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  AllowOverride All' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Require all granted' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
