--- a/templates/aws-refarch-wordpress-04-web.yaml
+++ b/templates/aws-refarch-wordpress-04-web.yaml
@@ -936,8 +936,8 @@ Resources:
             yum:
               awslogs: []
               httpd24: []
+              mod24_ssl: []
               lynis: []
-              tig: []
               mysql57: []
               php72: []
               php72-devel: []
@@ -951,13 +951,9 @@ Resources:
                     "#!/bin/bash -xe\n",
                     "if [ ! -f /etc/httpd/conf.d/", !Ref WPDirectory, ".conf ]; then\n",                    
                     "   touch /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo 'ServerName https://wp.rxrevu.com' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
+                    "   echo 'ServerName 127.0.0.1:80' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo 'DocumentRoot /var/www/wordpress/", !Ref WPDirectory, "' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '<Directory /var/www/wordpress/", !Ref WPDirectory, ">' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteEngine On' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteCond %{HTTPS} !=on'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteCond %{HTTP_HOST} =wp.rxrevu.com'  >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
-                    "   echo '  RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L]' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Options Indexes FollowSymLinks' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  AllowOverride All' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
                     "   echo '  Require all granted' >> /etc/httpd/conf.d/", !Ref WPDirectory, ".conf\n",
