--- a/samples/20-aws.ini
+++ b/samples/20-aws.ini
@@ -1,9 +1,10 @@
 ; Enable php.ini overrides for hosting WordPress on AWS - https://github.com/awslabs/aws-refarch-wordpress
 
-memory_limit = 256M
-post_max_size = 0
-upload_max_filesize = 64M
-max_input_time = 60
-max_execution_time = 30
+memory_limit = 512M
+post_max_size = 128M
+upload_max_filesize = 256M
+max_input_time = 600
+max_execution_time = 180
+max_input_vars = 5000
 expose_php = 0
 realpath_cache_size = 16M
